# serializer version: 1
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_absolute_pressure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn69lp_192_168_1_100_absolute_pressure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Absolute pressure',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRESSURE: 'pressure'>,
    'original_icon': None,
    'original_name': 'Absolute pressure',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'absolute_pressure',
    'unique_id': '01JQBX3H8Z9K2M4N6P7R8S9TAV_absolute_pressure',
    'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_absolute_pressure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'pressure',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN69LP (192.168.1.100) Absolute pressure',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPressure.HPA: 'hPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn69lp_192_168_1_100_absolute_pressure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1001.5',
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_battery_voltage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.wn69lp_192_168_1_100_battery_voltage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery voltage',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.VOLTAGE: 'voltage'>,
    'original_icon': None,
    'original_name': 'Battery voltage',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_voltage',
    'unique_id': '01JQBX3H8Z9K2M4N6P7R8S9TAV_battery_voltage',
    'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_battery_voltage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'voltage',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN69LP (192.168.1.100) Battery voltage',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricPotential.VOLT: 'V'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn69lp_192_168_1_100_battery_voltage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3.12',
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_gust_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn69lp_192_168_1_100_gust_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Gust speed',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'Gust speed',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'gust_speed',
    'unique_id': '01JQBX3H8Z9K2M4N6P7R8S9TAV_gust_speed',
    'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_gust_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_speed',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN69LP (192.168.1.100) Gust speed',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn69lp_192_168_1_100_gust_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.08',
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn69lp_192_168_1_100_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Humidity',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'Humidity',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'humidity',
    'unique_id': '01JQBX3H8Z9K2M4N6P7R8S9TAV_humidity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN69LP (192.168.1.100) Humidity',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn69lp_192_168_1_100_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '60',
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn69lp_192_168_1_100_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ILLUMINANCE: 'illuminance'>,
    'original_icon': None,
    'original_name': 'Light',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': '01JQBX3H8Z9K2M4N6P7R8S9TAV_light',
    'unit_of_measurement': 'lx',
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'illuminance',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN69LP (192.168.1.100) Light',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'lx',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn69lp_192_168_1_100_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '17670',
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_rainfall-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn69lp_192_168_1_100_rainfall',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rainfall',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 3,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRECIPITATION: 'precipitation'>,
    'original_icon': None,
    'original_name': 'Rainfall',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rainfall',
    'unique_id': '01JQBX3H8Z9K2M4N6P7R8S9TAV_rainfall',
    'unit_of_measurement': <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_rainfall-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'precipitation',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN69LP (192.168.1.100) Rainfall',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn69lp_192_168_1_100_rainfall',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '35.306',
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_recent_rainfall-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn69lp_192_168_1_100_recent_rainfall',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Recent rainfall',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 3,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRECIPITATION: 'precipitation'>,
    'original_icon': None,
    'original_name': 'Recent rainfall',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'recent_rainfall',
    'unique_id': '01JQBX3H8Z9K2M4N6P7R8S9TAV_recent_rainfall',
    'unit_of_measurement': <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_recent_rainfall-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'precipitation',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN69LP (192.168.1.100) Recent rainfall',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn69lp_192_168_1_100_recent_rainfall',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.27',
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_supply_voltage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.wn69lp_192_168_1_100_supply_voltage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Supply voltage',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.VOLTAGE: 'voltage'>,
    'original_icon': None,
    'original_name': 'Supply voltage',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'supply_voltage',
    'unique_id': '01JQBX3H8Z9K2M4N6P7R8S9TAV_supply_voltage',
    'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_supply_voltage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'voltage',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN69LP (192.168.1.100) Supply voltage',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricPotential.VOLT: 'V'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn69lp_192_168_1_100_supply_voltage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12.0',
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn69lp_192_168_1_100_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature',
    'unique_id': '01JQBX3H8Z9K2M4N6P7R8S9TAV_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN69LP (192.168.1.100) Temperature',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn69lp_192_168_1_100_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '26.2',
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_uv_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn69lp_192_168_1_100_uv_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'UV index',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'UV index',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'uv_index',
    'unique_id': '01JQBX3H8Z9K2M4N6P7R8S9TAV_uv_index',
    'unit_of_measurement': 'UV index',
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_uv_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN69LP (192.168.1.100) UV index',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'UV index',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn69lp_192_168_1_100_uv_index',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_wind_direction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT_ANGLE: 'measurement_angle'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn69lp_192_168_1_100_wind_direction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind direction',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.WIND_DIRECTION: 'wind_direction'>,
    'original_icon': None,
    'original_name': 'Wind direction',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_direction',
    'unique_id': '01JQBX3H8Z9K2M4N6P7R8S9TAV_wind_direction',
    'unit_of_measurement': '°',
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_wind_direction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_direction',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN69LP (192.168.1.100) Wind direction',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT_ANGLE: 'measurement_angle'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '°',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn69lp_192_168_1_100_wind_direction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '150',
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_wind_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn69lp_192_168_1_100_wind_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind speed',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'Wind speed',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_speed',
    'unique_id': '01JQBX3H8Z9K2M4N6P7R8S9TAV_wind_speed',
    'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_all_entities[WN69LP][sensor.wn69lp_192_168_1_100_wind_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_speed',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN69LP (192.168.1.100) Wind speed',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn69lp_192_168_1_100_wind_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4.32',
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_absolute_pressure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn90lp_192_168_1_100_absolute_pressure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Absolute pressure',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRESSURE: 'pressure'>,
    'original_icon': None,
    'original_name': 'Absolute pressure',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'absolute_pressure',
    'unique_id': '12345678_absolute_pressure',
    'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_absolute_pressure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'pressure',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN90LP (192.168.1.100) Absolute pressure',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPressure.HPA: 'hPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn90lp_192_168_1_100_absolute_pressure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1001.0',
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_gust_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn90lp_192_168_1_100_gust_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Gust speed',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'Gust speed',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'gust_speed',
    'unique_id': '12345678_gust_speed',
    'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_gust_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_speed',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN90LP (192.168.1.100) Gust speed',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn90lp_192_168_1_100_gust_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn90lp_192_168_1_100_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Humidity',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'Humidity',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'humidity',
    'unique_id': '12345678_humidity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN90LP (192.168.1.100) Humidity',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn90lp_192_168_1_100_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '60',
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn90lp_192_168_1_100_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ILLUMINANCE: 'illuminance'>,
    'original_icon': None,
    'original_name': 'Light',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': '12345678_light',
    'unit_of_measurement': 'lx',
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'illuminance',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN90LP (192.168.1.100) Light',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'lx',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn90lp_192_168_1_100_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '17670',
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_rain_counter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn90lp_192_168_1_100_rain_counter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rain counter',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRECIPITATION: 'precipitation'>,
    'original_icon': None,
    'original_name': 'Rain counter',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rain_counter',
    'unique_id': '12345678_rain_counter',
    'unit_of_measurement': <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_rain_counter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'precipitation',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN90LP (192.168.1.100) Rain counter',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn90lp_192_168_1_100_rain_counter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.18',
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_rainfall-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn90lp_192_168_1_100_rainfall',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rainfall',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRECIPITATION: 'precipitation'>,
    'original_icon': None,
    'original_name': 'Rainfall',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rainfall',
    'unique_id': '12345678_rainfall',
    'unit_of_measurement': <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_rainfall-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'precipitation',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN90LP (192.168.1.100) Rainfall',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn90lp_192_168_1_100_rainfall',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn90lp_192_168_1_100_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature',
    'unique_id': '12345678_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN90LP (192.168.1.100) Temperature',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn90lp_192_168_1_100_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '26.2',
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_uv_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn90lp_192_168_1_100_uv_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'UV index',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'UV index',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'uv_index',
    'unique_id': '12345678_uv_index',
    'unit_of_measurement': 'UV index',
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_uv_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN90LP (192.168.1.100) UV index',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'UV index',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn90lp_192_168_1_100_uv_index',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.3',
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_wind_direction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT_ANGLE: 'measurement_angle'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn90lp_192_168_1_100_wind_direction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind direction',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.WIND_DIRECTION: 'wind_direction'>,
    'original_icon': None,
    'original_name': 'Wind direction',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_direction',
    'unique_id': '12345678_wind_direction',
    'unit_of_measurement': '°',
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_wind_direction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_direction',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN90LP (192.168.1.100) Wind direction',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT_ANGLE: 'measurement_angle'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '°',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn90lp_192_168_1_100_wind_direction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '150',
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_wind_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.wn90lp_192_168_1_100_wind_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wind speed',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'Wind speed',
    'platform': 'ecowitt_modbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wind_speed',
    'unique_id': '12345678_wind_speed',
    'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_all_entities[WN90LP][sensor.wn90lp_192_168_1_100_wind_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_speed',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WN90LP (192.168.1.100) Wind speed',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.wn90lp_192_168_1_100_wind_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
